# photoreceptorLinearization

./: demo.ipynb  pyproject.toml
photoreceptor_linearization/: __init__.py  biophys_model.py  calibration.py  coefficients.py  fitting.py  inverted_model.py  params.py
photoreceptor_linearization/data/devices/: blue_led_spectrum.txt  red_led_spectrum.txt  uv_led_spectrum.txt
photoreceptor_linearization/data/sources/mouse/: m_cone_spectrum.txt  rod_spectrum.txt  s_cone_spectrum.txt
photoreceptor_linearization/data/sources/primate/: l_cone_spectrum.txt  m_cone_spectrum.txt  rod_spectrum.txt  s_cone_spectrum.txt
src/model/: demoMain.m
